questions backend for get ready, and frontend started
